--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Заголовок</h1>
-    <h2>Заголовок номер два</h2>
+    <h1 class="block">Заголовок</h1>
+    <span class="block__text">Заголовок</span>
 </body>
 </html>
