--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
 <body>
     <h1 class="block">Заголовок</h1>
     <span class="block__text">Заголовок</span>
+    <div class="block">
+      <h1>оглавление</h1>
+      <nav>
+        <ul>
+          <li class="nav-link"></li>
+          <li class="nav-link"></li>
+          <li class="nav-link"></li>
+          <li class="nav-link"></li>
+        </ul>
+      </nav>
+    </div>
 </body>
 </html>
