--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="nav-link"></li>
           <li class="nav-link"></li>
           <li class="nav-link"></li>
-          <li class="nav-link"></li>hgf
+          <li class="nav-link"></li>
         </ul>
       </nav>
     </div>
